--- a/src/main/webapp/css/admin/style.css
+++ b/src/main/webapp/css/admin/style.css
@@ -26,3 +26,9 @@
 .form-group label {
     margin-bottom: 10px;
 }
+
+.guide-word {
+    font-size: 0.8em;
+    margin: 10px;
+    color: #dc3545;
+}
